y.output
Terminals unused in grammar

    LP
    RP
    NUM
    SEMI
    OP_ASSIGN
    OP_EXP
    ID
    EXIT
    RETURN
    QUIT
    OP_COMP
    T_PERCENT
    T_PX
    OP_MINUS
    OP_PLUS
    OP_MULT
    OP_DIV
    UMINUS
    OP_I


Rules useless in parser due to conflicts

   18 P: %empty

   21 PARAMS: %empty

   24 SELECTORS: %empty

   31 DECLS: %empty


State 0 conflicts: 1 shift/reduce, 3 reduce/reduce
State 3 conflicts: 1 shift/reduce, 3 reduce/reduce
State 5 conflicts: 5 shift/reduce
State 16 conflicts: 4 shift/reduce
State 19 conflicts: 2 shift/reduce, 3 reduce/reduce
State 20 conflicts: 1 reduce/reduce
State 23 conflicts: 5 shift/reduce
State 24 conflicts: 5 shift/reduce
State 25 conflicts: 5 shift/reduce
State 26 conflicts: 5 shift/reduce
State 35 conflicts: 2 shift/reduce, 3 reduce/reduce
State 36 conflicts: 1 reduce/reduce
State 39 conflicts: 4 shift/reduce
State 40 conflicts: 4 shift/reduce
State 41 conflicts: 4 shift/reduce
State 42 conflicts: 4 shift/reduce


Grammar

    0 $accept: S $end

    1 S: %empty
    2  | ST S

    3 ST: VARDECL
    4   | CSSRULE

    5 VARDECL: VAR EXPR

    6 VAR: %empty
    7    | T_DOLLAR IDENTIFIER

    8 EXPR: VAR
    9     | NUMBER UNIT
   10     | ATOM
   11     | FNCALL
   12     | T_PL EXPR T_PR
   13     | EXPR T_OP EXPR
   14     | EXPR T_OM EXPR
   15     | EXPR T_OS EXPR
   16     | EXPR T_OD EXPR

   17 FNCALL: IDENTIFIER T_PL P T_PR

   18 P: %empty
   19  | EXPR
   20  | EXPR PARAMS

   21 PARAMS: %empty
   22       | T_COMMA EXPR

   23 CSSRULE: SELECTORS T_CBL DECLS T_CBR

   24 SELECTORS: %empty
   25          | SELECTORS INHERIT SELECTOR PSEUDOCLASS

   26 SELECTOR: IDENTIFIER
   27         | T_HASH IDENTIFIER
   28         | T_DOT IDENTIFIER

   29 PSEUDOCLASS: %empty
   30            | PSEUDO

   31 DECLS: %empty
   32      | DECL DECLS

   33 DECL: IDENTIFIER T_COLON EXPR T_SEMICOLON
   34     | CSSRULE
   35     | VARDECL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LP (258)
    RP (259)
    NUM (260)
    SEMI (261)
    OP_ASSIGN (262)
    OP_EXP (263)
    ID (264)
    EXIT (265)
    RETURN (266)
    QUIT (267)
    OP_COMP (268)
    IDENTIFIER (269) 7 17 26 27 28 33
    NUMBER (270) 9
    UNIT (271) 9
    ATOM (272) 10
    INHERIT (273) 25
    PSEUDO (274) 30
    T_DOLLAR (275) 7
    T_SEMICOLON (276) 33
    T_COLON (277) 33
    T_DOT (278) 28
    T_COMMA (279) 22
    T_HASH (280) 27
    T_PERCENT (281)
    T_PX (282)
    T_PL (283) 12 17
    T_PR (284) 12 17
    T_CBL (285) 23
    T_CBR (286) 23
    T_OP (287) 13
    T_OM (288) 14
    T_OS (289) 15
    T_OD (290) 16
    OP_MINUS (291)
    OP_PLUS (292)
    OP_MULT (293)
    OP_DIV (294)
    UMINUS (295)
    OP_I (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    S (43)
        on left: 1 2
        on right: 0 2
    ST (44)
        on left: 3 4
        on right: 2
    VARDECL (45)
        on left: 5
        on right: 3 35
    VAR (46)
        on left: 6 7
        on right: 5 8
    EXPR (47)
        on left: 8 9 10 11 12 13 14 15 16
        on right: 5 12 13 14 15 16 19 20 22 33
    FNCALL (48)
        on left: 17
        on right: 11
    P (49)
        on left: 18 19 20
        on right: 17
    PARAMS (50)
        on left: 21 22
        on right: 20
    CSSRULE (51)
        on left: 23
        on right: 4 34
    SELECTORS (52)
        on left: 24 25
        on right: 23 25
    SELECTOR (53)
        on left: 26 27 28
        on right: 25
    PSEUDOCLASS (54)
        on left: 29 30
        on right: 25
    DECLS (55)
        on left: 31 32
        on right: 23 32
    DECL (56)
        on left: 33 34 35
        on right: 32


State 0

    0 $accept: . S $end

    T_DOLLAR  shift, and go to state 1

    $end      reduce using rule 1 (S)
    $end      [reduce using rule 6 (VAR)]
    INHERIT   reduce using rule 6 (VAR)
    INHERIT   [reduce using rule 24 (SELECTORS)]
    T_DOLLAR  [reduce using rule 6 (VAR)]
    T_CBL     reduce using rule 6 (VAR)
    T_CBL     [reduce using rule 24 (SELECTORS)]
    $default  reduce using rule 6 (VAR)

    S          go to state 2
    ST         go to state 3
    VARDECL    go to state 4
    VAR        go to state 5
    CSSRULE    go to state 6
    SELECTORS  go to state 7


State 1

    7 VAR: T_DOLLAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 8


State 2

    0 $accept: S . $end

    $end  shift, and go to state 9


State 3

    2 S: ST . S

    T_DOLLAR  shift, and go to state 1

    $end      reduce using rule 1 (S)
    $end      [reduce using rule 6 (VAR)]
    INHERIT   reduce using rule 6 (VAR)
    INHERIT   [reduce using rule 24 (SELECTORS)]
    T_DOLLAR  [reduce using rule 6 (VAR)]
    T_CBL     reduce using rule 6 (VAR)
    T_CBL     [reduce using rule 24 (SELECTORS)]
    $default  reduce using rule 6 (VAR)

    S          go to state 10
    ST         go to state 3
    VARDECL    go to state 4
    VAR        go to state 5
    CSSRULE    go to state 6
    SELECTORS  go to state 7


State 4

    3 ST: VARDECL .

    $default  reduce using rule 3 (ST)


State 5

    5 VARDECL: VAR . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    IDENTIFIER  [reduce using rule 6 (VAR)]
    NUMBER      [reduce using rule 6 (VAR)]
    ATOM        [reduce using rule 6 (VAR)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_PL        [reduce using rule 6 (VAR)]
    $default    reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 16
    FNCALL  go to state 17


State 6

    4 ST: CSSRULE .

    $default  reduce using rule 4 (ST)


State 7

   23 CSSRULE: SELECTORS . T_CBL DECLS T_CBR
   25 SELECTORS: SELECTORS . INHERIT SELECTOR PSEUDOCLASS

    INHERIT  shift, and go to state 18
    T_CBL    shift, and go to state 19


State 8

    7 VAR: T_DOLLAR IDENTIFIER .

    $default  reduce using rule 7 (VAR)


State 9

    0 $accept: S $end .

    $default  accept


State 10

    2 S: ST S .

    $default  reduce using rule 2 (S)


State 11

   17 FNCALL: IDENTIFIER . T_PL P T_PR

    T_PL  shift, and go to state 20


State 12

    9 EXPR: NUMBER . UNIT

    UNIT  shift, and go to state 21


State 13

   10 EXPR: ATOM .

    $default  reduce using rule 10 (EXPR)


State 14

   12 EXPR: T_PL . EXPR T_PR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    $default  reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 22
    FNCALL  go to state 17


State 15

    8 EXPR: VAR .

    $default  reduce using rule 8 (EXPR)


State 16

    5 VARDECL: VAR EXPR .
   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    T_OP      [reduce using rule 5 (VARDECL)]
    T_OM      [reduce using rule 5 (VARDECL)]
    T_OS      [reduce using rule 5 (VARDECL)]
    T_OD      [reduce using rule 5 (VARDECL)]
    $default  reduce using rule 5 (VARDECL)


State 17

   11 EXPR: FNCALL .

    $default  reduce using rule 11 (EXPR)


State 18

   25 SELECTORS: SELECTORS INHERIT . SELECTOR PSEUDOCLASS

    IDENTIFIER  shift, and go to state 27
    T_DOT       shift, and go to state 28
    T_HASH      shift, and go to state 29

    SELECTOR  go to state 30


State 19

   23 CSSRULE: SELECTORS T_CBL . DECLS T_CBR

    IDENTIFIER  shift, and go to state 31
    T_DOLLAR    shift, and go to state 1

    IDENTIFIER  [reduce using rule 6 (VAR)]
    INHERIT     reduce using rule 6 (VAR)
    INHERIT     [reduce using rule 24 (SELECTORS)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_CBL       reduce using rule 6 (VAR)
    T_CBL       [reduce using rule 24 (SELECTORS)]
    T_CBR       reduce using rule 6 (VAR)
    T_CBR       [reduce using rule 31 (DECLS)]
    $default    reduce using rule 6 (VAR)

    VARDECL    go to state 32
    VAR        go to state 5
    CSSRULE    go to state 33
    SELECTORS  go to state 7
    DECLS      go to state 34
    DECL       go to state 35


State 20

   17 FNCALL: IDENTIFIER T_PL . P T_PR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    T_PR      reduce using rule 6 (VAR)
    T_PR      [reduce using rule 18 (P)]
    $default  reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 36
    FNCALL  go to state 17
    P       go to state 37


State 21

    9 EXPR: NUMBER UNIT .

    $default  reduce using rule 9 (EXPR)


State 22

   12 EXPR: T_PL EXPR . T_PR
   13     | EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR

    T_PR  shift, and go to state 38
    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26


State 23

   13 EXPR: EXPR T_OP . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    IDENTIFIER  [reduce using rule 6 (VAR)]
    NUMBER      [reduce using rule 6 (VAR)]
    ATOM        [reduce using rule 6 (VAR)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_PL        [reduce using rule 6 (VAR)]
    $default    reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 39
    FNCALL  go to state 17


State 24

   14 EXPR: EXPR T_OM . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    IDENTIFIER  [reduce using rule 6 (VAR)]
    NUMBER      [reduce using rule 6 (VAR)]
    ATOM        [reduce using rule 6 (VAR)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_PL        [reduce using rule 6 (VAR)]
    $default    reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 40
    FNCALL  go to state 17


State 25

   15 EXPR: EXPR T_OS . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    IDENTIFIER  [reduce using rule 6 (VAR)]
    NUMBER      [reduce using rule 6 (VAR)]
    ATOM        [reduce using rule 6 (VAR)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_PL        [reduce using rule 6 (VAR)]
    $default    reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 41
    FNCALL  go to state 17


State 26

   16 EXPR: EXPR T_OD . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    IDENTIFIER  [reduce using rule 6 (VAR)]
    NUMBER      [reduce using rule 6 (VAR)]
    ATOM        [reduce using rule 6 (VAR)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_PL        [reduce using rule 6 (VAR)]
    $default    reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 42
    FNCALL  go to state 17


State 27

   26 SELECTOR: IDENTIFIER .

    $default  reduce using rule 26 (SELECTOR)


State 28

   28 SELECTOR: T_DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 29

   27 SELECTOR: T_HASH . IDENTIFIER

    IDENTIFIER  shift, and go to state 44


State 30

   25 SELECTORS: SELECTORS INHERIT SELECTOR . PSEUDOCLASS

    PSEUDO  shift, and go to state 45

    $default  reduce using rule 29 (PSEUDOCLASS)

    PSEUDOCLASS  go to state 46


State 31

   33 DECL: IDENTIFIER . T_COLON EXPR T_SEMICOLON

    T_COLON  shift, and go to state 47


State 32

   35 DECL: VARDECL .

    $default  reduce using rule 35 (DECL)


State 33

   34 DECL: CSSRULE .

    $default  reduce using rule 34 (DECL)


State 34

   23 CSSRULE: SELECTORS T_CBL DECLS . T_CBR

    T_CBR  shift, and go to state 48


State 35

   32 DECLS: DECL . DECLS

    IDENTIFIER  shift, and go to state 31
    T_DOLLAR    shift, and go to state 1

    IDENTIFIER  [reduce using rule 6 (VAR)]
    INHERIT     reduce using rule 6 (VAR)
    INHERIT     [reduce using rule 24 (SELECTORS)]
    T_DOLLAR    [reduce using rule 6 (VAR)]
    T_CBL       reduce using rule 6 (VAR)
    T_CBL       [reduce using rule 24 (SELECTORS)]
    T_CBR       reduce using rule 6 (VAR)
    T_CBR       [reduce using rule 31 (DECLS)]
    $default    reduce using rule 6 (VAR)

    VARDECL    go to state 32
    VAR        go to state 5
    CSSRULE    go to state 33
    SELECTORS  go to state 7
    DECLS      go to state 49
    DECL       go to state 35


State 36

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR
   19 P: EXPR .
   20  | EXPR . PARAMS

    T_COMMA  shift, and go to state 50
    T_OP     shift, and go to state 23
    T_OM     shift, and go to state 24
    T_OS     shift, and go to state 25
    T_OD     shift, and go to state 26

    T_PR      reduce using rule 19 (P)
    T_PR      [reduce using rule 21 (PARAMS)]
    $default  reduce using rule 19 (P)

    PARAMS  go to state 51


State 37

   17 FNCALL: IDENTIFIER T_PL P . T_PR

    T_PR  shift, and go to state 52


State 38

   12 EXPR: T_PL EXPR T_PR .

    $default  reduce using rule 12 (EXPR)


State 39

   13 EXPR: EXPR . T_OP EXPR
   13     | EXPR T_OP EXPR .
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    T_OP      [reduce using rule 13 (EXPR)]
    T_OM      [reduce using rule 13 (EXPR)]
    T_OS      [reduce using rule 13 (EXPR)]
    T_OD      [reduce using rule 13 (EXPR)]
    $default  reduce using rule 13 (EXPR)


State 40

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   14     | EXPR T_OM EXPR .
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    T_OP      [reduce using rule 14 (EXPR)]
    T_OM      [reduce using rule 14 (EXPR)]
    T_OS      [reduce using rule 14 (EXPR)]
    T_OD      [reduce using rule 14 (EXPR)]
    $default  reduce using rule 14 (EXPR)


State 41

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   15     | EXPR T_OS EXPR .
   16     | EXPR . T_OD EXPR

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    T_OP      [reduce using rule 15 (EXPR)]
    T_OM      [reduce using rule 15 (EXPR)]
    T_OS      [reduce using rule 15 (EXPR)]
    T_OD      [reduce using rule 15 (EXPR)]
    $default  reduce using rule 15 (EXPR)


State 42

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR
   16     | EXPR T_OD EXPR .

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    T_OP      [reduce using rule 16 (EXPR)]
    T_OM      [reduce using rule 16 (EXPR)]
    T_OS      [reduce using rule 16 (EXPR)]
    T_OD      [reduce using rule 16 (EXPR)]
    $default  reduce using rule 16 (EXPR)


State 43

   28 SELECTOR: T_DOT IDENTIFIER .

    $default  reduce using rule 28 (SELECTOR)


State 44

   27 SELECTOR: T_HASH IDENTIFIER .

    $default  reduce using rule 27 (SELECTOR)


State 45

   30 PSEUDOCLASS: PSEUDO .

    $default  reduce using rule 30 (PSEUDOCLASS)


State 46

   25 SELECTORS: SELECTORS INHERIT SELECTOR PSEUDOCLASS .

    $default  reduce using rule 25 (SELECTORS)


State 47

   33 DECL: IDENTIFIER T_COLON . EXPR T_SEMICOLON

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    $default  reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 53
    FNCALL  go to state 17


State 48

   23 CSSRULE: SELECTORS T_CBL DECLS T_CBR .

    $default  reduce using rule 23 (CSSRULE)


State 49

   32 DECLS: DECL DECLS .

    $default  reduce using rule 32 (DECLS)


State 50

   22 PARAMS: T_COMMA . EXPR

    IDENTIFIER  shift, and go to state 11
    NUMBER      shift, and go to state 12
    ATOM        shift, and go to state 13
    T_DOLLAR    shift, and go to state 1
    T_PL        shift, and go to state 14

    $default  reduce using rule 6 (VAR)

    VAR     go to state 15
    EXPR    go to state 54
    FNCALL  go to state 17


State 51

   20 P: EXPR PARAMS .

    $default  reduce using rule 20 (P)


State 52

   17 FNCALL: IDENTIFIER T_PL P T_PR .

    $default  reduce using rule 17 (FNCALL)


State 53

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR
   33 DECL: IDENTIFIER T_COLON EXPR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 55
    T_OP         shift, and go to state 23
    T_OM         shift, and go to state 24
    T_OS         shift, and go to state 25
    T_OD         shift, and go to state 26


State 54

   13 EXPR: EXPR . T_OP EXPR
   14     | EXPR . T_OM EXPR
   15     | EXPR . T_OS EXPR
   16     | EXPR . T_OD EXPR
   22 PARAMS: T_COMMA EXPR .

    T_OP  shift, and go to state 23
    T_OM  shift, and go to state 24
    T_OS  shift, and go to state 25
    T_OD  shift, and go to state 26

    $default  reduce using rule 22 (PARAMS)


State 55

   33 DECL: IDENTIFIER T_COLON EXPR T_SEMICOLON .

    $default  reduce using rule 33 (DECL)
